added new ml model notebooks. added RSI indicator.

--- a/modeling/logistic_regression.ipynb
+++ b/modeling/logistic_regression.ipynb
@@ -48,7 +48,8 @@
     "from pandas.tseries.offsets import DateOffset\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import classification_report\n"
+    "from sklearn.metrics import classification_report\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -939,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "id": "bd6c4f6b-9c67-4bef-ab2a-a5ab92bcd2f3",
    "metadata": {
     "tags": []
@@ -947,394 +948,26 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>adjclose</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>SMA_30</th>\n",
-       "      <th>SMA_100</th>\n",
-       "      <th>MACD_12_26_9</th>\n",
-       "      <th>MACDh_12_26_9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>STOCHd_14_3_3</th>\n",
-       "      <th>CUMLOGRET_1</th>\n",
-       "      <th>LOGRET_1</th>\n",
-       "      <th>CUMPCTRET_1</th>\n",
-       "      <th>PCTRET_1</th>\n",
-       "      <th>performance_signal</th>\n",
-       "      <th>SMA_signal</th>\n",
-       "      <th>MACD_signal</th>\n",
-       "      <th>BB_signal</th>\n",
-       "      <th>model_signal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-01-10</th>\n",
-       "      <td>70.232000</td>\n",
-       "      <td>70.940000</td>\n",
-       "      <td>69.724000</td>\n",
-       "      <td>70.838001</td>\n",
-       "      <td>69.840240</td>\n",
-       "      <td>5811250.0</td>\n",
-       "      <td>73.507654</td>\n",
-       "      <td>72.544916</td>\n",
-       "      <td>-0.668295</td>\n",
-       "      <td>-0.324864</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10.631973</td>\n",
-       "      <td>0.358140</td>\n",
-       "      <td>-0.001065</td>\n",
-       "      <td>0.430666</td>\n",
-       "      <td>-0.001065</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-11</th>\n",
-       "      <td>70.724000</td>\n",
-       "      <td>71.450000</td>\n",
-       "      <td>70.432001</td>\n",
-       "      <td>71.367999</td>\n",
-       "      <td>70.365266</td>\n",
-       "      <td>4558580.0</td>\n",
-       "      <td>73.394754</td>\n",
-       "      <td>72.547756</td>\n",
-       "      <td>-0.696819</td>\n",
-       "      <td>-0.282710</td>\n",
-       "      <td>...</td>\n",
-       "      <td>14.385854</td>\n",
-       "      <td>0.365594</td>\n",
-       "      <td>0.007454</td>\n",
-       "      <td>0.441370</td>\n",
-       "      <td>0.007482</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-12</th>\n",
-       "      <td>71.769999</td>\n",
-       "      <td>72.073000</td>\n",
-       "      <td>71.416998</td>\n",
-       "      <td>71.652001</td>\n",
-       "      <td>70.646622</td>\n",
-       "      <td>7299710.0</td>\n",
-       "      <td>73.300987</td>\n",
-       "      <td>72.547486</td>\n",
-       "      <td>-0.688570</td>\n",
-       "      <td>-0.219569</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.559157</td>\n",
-       "      <td>0.369566</td>\n",
-       "      <td>0.003972</td>\n",
-       "      <td>0.447106</td>\n",
-       "      <td>0.003979</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-13</th>\n",
-       "      <td>71.867501</td>\n",
-       "      <td>72.048001</td>\n",
-       "      <td>70.506700</td>\n",
-       "      <td>70.680999</td>\n",
-       "      <td>69.685038</td>\n",
-       "      <td>5039770.0</td>\n",
-       "      <td>73.194120</td>\n",
-       "      <td>72.533366</td>\n",
-       "      <td>-0.751719</td>\n",
-       "      <td>-0.226175</td>\n",
-       "      <td>...</td>\n",
-       "      <td>29.786510</td>\n",
-       "      <td>0.355921</td>\n",
-       "      <td>-0.013644</td>\n",
-       "      <td>0.427495</td>\n",
-       "      <td>-0.013552</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-14</th>\n",
-       "      <td>70.370000</td>\n",
-       "      <td>71.029000</td>\n",
-       "      <td>70.300001</td>\n",
-       "      <td>70.871999</td>\n",
-       "      <td>69.874267</td>\n",
-       "      <td>3985700.0</td>\n",
-       "      <td>73.081420</td>\n",
-       "      <td>72.522216</td>\n",
-       "      <td>-0.777392</td>\n",
-       "      <td>-0.201478</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31.949750</td>\n",
-       "      <td>0.358620</td>\n",
-       "      <td>0.002699</td>\n",
-       "      <td>0.431353</td>\n",
-       "      <td>0.002702</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-03-30</th>\n",
-       "      <td>62.498999</td>\n",
-       "      <td>62.683999</td>\n",
-       "      <td>62.284001</td>\n",
-       "      <td>62.597001</td>\n",
-       "      <td>62.553914</td>\n",
-       "      <td>2644460.0</td>\n",
-       "      <td>60.349767</td>\n",
-       "      <td>58.862872</td>\n",
-       "      <td>0.735721</td>\n",
-       "      <td>0.122529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>82.022033</td>\n",
-       "      <td>0.234462</td>\n",
-       "      <td>0.005254</td>\n",
-       "      <td>0.264228</td>\n",
-       "      <td>0.005267</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-03-31</th>\n",
-       "      <td>62.564499</td>\n",
-       "      <td>63.202998</td>\n",
-       "      <td>62.499998</td>\n",
-       "      <td>63.144998</td>\n",
-       "      <td>63.101796</td>\n",
-       "      <td>2914240.0</td>\n",
-       "      <td>60.448334</td>\n",
-       "      <td>58.937388</td>\n",
-       "      <td>0.799553</td>\n",
-       "      <td>0.149089</td>\n",
-       "      <td>...</td>\n",
-       "      <td>87.124558</td>\n",
-       "      <td>0.243178</td>\n",
-       "      <td>0.008716</td>\n",
-       "      <td>0.275296</td>\n",
-       "      <td>0.008754</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-03</th>\n",
-       "      <td>62.863999</td>\n",
-       "      <td>63.174999</td>\n",
-       "      <td>62.645000</td>\n",
-       "      <td>63.086001</td>\n",
-       "      <td>63.086001</td>\n",
-       "      <td>5312600.0</td>\n",
-       "      <td>60.553500</td>\n",
-       "      <td>59.008498</td>\n",
-       "      <td>0.835746</td>\n",
-       "      <td>0.148225</td>\n",
-       "      <td>...</td>\n",
-       "      <td>93.062325</td>\n",
-       "      <td>0.242243</td>\n",
-       "      <td>-0.000935</td>\n",
-       "      <td>0.274104</td>\n",
-       "      <td>-0.000934</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-04</th>\n",
-       "      <td>62.999001</td>\n",
-       "      <td>63.307998</td>\n",
-       "      <td>62.644001</td>\n",
-       "      <td>62.960001</td>\n",
-       "      <td>62.960001</td>\n",
-       "      <td>3637960.0</td>\n",
-       "      <td>60.685700</td>\n",
-       "      <td>59.076084</td>\n",
-       "      <td>0.844526</td>\n",
-       "      <td>0.125605</td>\n",
-       "      <td>...</td>\n",
-       "      <td>95.638739</td>\n",
-       "      <td>0.240244</td>\n",
-       "      <td>-0.001999</td>\n",
-       "      <td>0.271560</td>\n",
-       "      <td>-0.001997</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-05</th>\n",
-       "      <td>62.854499</td>\n",
-       "      <td>62.986999</td>\n",
-       "      <td>62.411001</td>\n",
-       "      <td>62.698999</td>\n",
-       "      <td>62.698999</td>\n",
-       "      <td>3233934.2</td>\n",
-       "      <td>60.810500</td>\n",
-       "      <td>59.147709</td>\n",
-       "      <td>0.820961</td>\n",
-       "      <td>0.081631</td>\n",
-       "      <td>...</td>\n",
-       "      <td>92.401069</td>\n",
-       "      <td>0.236090</td>\n",
-       "      <td>-0.004154</td>\n",
-       "      <td>0.266288</td>\n",
-       "      <td>-0.004146</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>311 rows × 31 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 open       high        low      close   adjclose     volume  \\\n",
-       "2022-01-10  70.232000  70.940000  69.724000  70.838001  69.840240  5811250.0   \n",
-       "2022-01-11  70.724000  71.450000  70.432001  71.367999  70.365266  4558580.0   \n",
-       "2022-01-12  71.769999  72.073000  71.416998  71.652001  70.646622  7299710.0   \n",
-       "2022-01-13  71.867501  72.048001  70.506700  70.680999  69.685038  5039770.0   \n",
-       "2022-01-14  70.370000  71.029000  70.300001  70.871999  69.874267  3985700.0   \n",
-       "...               ...        ...        ...        ...        ...        ...   \n",
-       "2023-03-30  62.498999  62.683999  62.284001  62.597001  62.553914  2644460.0   \n",
-       "2023-03-31  62.564499  63.202998  62.499998  63.144998  63.101796  2914240.0   \n",
-       "2023-04-03  62.863999  63.174999  62.645000  63.086001  63.086001  5312600.0   \n",
-       "2023-04-04  62.999001  63.307998  62.644001  62.960001  62.960001  3637960.0   \n",
-       "2023-04-05  62.854499  62.986999  62.411001  62.698999  62.698999  3233934.2   \n",
-       "\n",
-       "               SMA_30    SMA_100  MACD_12_26_9  MACDh_12_26_9  ...  \\\n",
-       "2022-01-10  73.507654  72.544916     -0.668295      -0.324864  ...   \n",
-       "2022-01-11  73.394754  72.547756     -0.696819      -0.282710  ...   \n",
-       "2022-01-12  73.300987  72.547486     -0.688570      -0.219569  ...   \n",
-       "2022-01-13  73.194120  72.533366     -0.751719      -0.226175  ...   \n",
-       "2022-01-14  73.081420  72.522216     -0.777392      -0.201478  ...   \n",
-       "...               ...        ...           ...            ...  ...   \n",
-       "2023-03-30  60.349767  58.862872      0.735721       0.122529  ...   \n",
-       "2023-03-31  60.448334  58.937388      0.799553       0.149089  ...   \n",
-       "2023-04-03  60.553500  59.008498      0.835746       0.148225  ...   \n",
-       "2023-04-04  60.685700  59.076084      0.844526       0.125605  ...   \n",
-       "2023-04-05  60.810500  59.147709      0.820961       0.081631  ...   \n",
-       "\n",
-       "            STOCHd_14_3_3  CUMLOGRET_1  LOGRET_1  CUMPCTRET_1  PCTRET_1  \\\n",
-       "2022-01-10      10.631973     0.358140 -0.001065     0.430666 -0.001065   \n",
-       "2022-01-11      14.385854     0.365594  0.007454     0.441370  0.007482   \n",
-       "2022-01-12      23.559157     0.369566  0.003972     0.447106  0.003979   \n",
-       "2022-01-13      29.786510     0.355921 -0.013644     0.427495 -0.013552   \n",
-       "2022-01-14      31.949750     0.358620  0.002699     0.431353  0.002702   \n",
-       "...                   ...          ...       ...          ...       ...   \n",
-       "2023-03-30      82.022033     0.234462  0.005254     0.264228  0.005267   \n",
-       "2023-03-31      87.124558     0.243178  0.008716     0.275296  0.008754   \n",
-       "2023-04-03      93.062325     0.242243 -0.000935     0.274104 -0.000934   \n",
-       "2023-04-04      95.638739     0.240244 -0.001999     0.271560 -0.001997   \n",
-       "2023-04-05      92.401069     0.236090 -0.004154     0.266288 -0.004146   \n",
-       "\n",
-       "            performance_signal  SMA_signal  MACD_signal  BB_signal  \\\n",
-       "2022-01-10                   0           1            0          1   \n",
-       "2022-01-11                   1           1            0          0   \n",
-       "2022-01-12                   1           1            0          0   \n",
-       "2022-01-13                   0           1            0          0   \n",
-       "2022-01-14                   1           1            0          0   \n",
-       "...                        ...         ...          ...        ...   \n",
-       "2023-03-30                   1           1            1          0   \n",
-       "2023-03-31                   1           1            1          0   \n",
-       "2023-04-03                   0           1            1          0   \n",
-       "2023-04-04                   0           1            1          0   \n",
-       "2023-04-05                   0           1            1          0   \n",
-       "\n",
-       "            model_signal  \n",
-       "2022-01-10           0.0  \n",
-       "2022-01-11           0.0  \n",
-       "2022-01-12           0.0  \n",
-       "2022-01-13           0.0  \n",
-       "2022-01-14           0.0  \n",
-       "...                  ...  \n",
-       "2023-03-30           1.0  \n",
-       "2023-03-31           1.0  \n",
-       "2023-04-03           1.0  \n",
-       "2023-04-04           1.0  \n",
-       "2023-04-05           NaN  \n",
-       "\n",
-       "[311 rows x 31 columns]"
+       "Index(['open', 'high', 'low', 'close', 'adjclose', 'volume', 'SMA_30',\n",
+       "       'SMA_100', 'MACD_12_26_9', 'MACDh_12_26_9', 'MACDs_12_26_9',\n",
+       "       'BBL_20_2.0', 'BBM_20_2.0', 'BBU_20_2.0', 'BBB_20_2.0', 'BBP_20_2.0',\n",
+       "       'RSI_14', 'HLC3', 'OHLC4', 'LR_14', 'STOCHk_14_3_3', 'STOCHd_14_3_3',\n",
+       "       'CUMLOGRET_1', 'LOGRET_1', 'CUMPCTRET_1', 'PCTRET_1',\n",
+       "       'performance_signal', 'SMA_signal', 'MACD_signal', 'BB_signal',\n",
+       "       'model_signal', 'Position', 'Entry/Exit Position', 'Portfolio Holdings',\n",
+       "       'Portfolio Cash', 'Portfolio Total', 'Portfolio Daily Returns',\n",
+       "       'Portfolio Cumulative Returns'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.columns"
    ]
   },
   {
