updated modeling notebooks to use ROC-AUC and F1 Score for metrics. update model selections based upon new metrics

--- a/project2_dev.ipynb
+++ b/project2_dev.ipynb
@@ -492,11 +492,88 @@
     "import modules.profile as prf\n",
     "import modules.algorithmic_functions as af\n",
     "import modules.AlgoTab as at\n",
+    "import scripts.create_data_files as cdf\n",
     "\n",
     "import pandas_ta as ta\n",
     "import yfinance as yf\n",
     "import datetime\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d27aaf52-acd4-48d4-a984-06dadac282fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = af.get_portfolio_summary('conservative', 2017,12,31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9139c690-bb19-47f7-b90b-33348889ff8d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = af.add_indicators(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0e7d6427-93c7-45d2-93fe-760b16d57a20",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['open', 'high', 'low', 'close', 'adjclose', 'volume', 'SMA_30',\n",
+       "       'SMA_100', 'SMA_200', 'EMA_50', 'MACD_12_26_9', 'MACDh_12_26_9',\n",
+       "       'MACDs_12_26_9', 'BBL_20_2.0', 'BBM_20_2.0', 'BBU_20_2.0', 'BBB_20_2.0',\n",
+       "       'BBP_20_2.0', 'RSI_14', 'HLC3', 'OHLC4', 'LR_14', 'STOCHk_14_3_3',\n",
+       "       'STOCHd_14_3_3'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a1ee9a-d66b-4b37-92c3-8e1ba84f5669",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a70ef00-757f-42b4-946e-ef515914bfcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe8da11e-c796-4ef6-b062-e2d4fae65b55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
