updated adaboost classifierr and lightGBM. Corrected spelling mistakes in lr aned svm files

--- a/modeling/svm.ipynb
+++ b/modeling/svm.ipynb
@@ -1875,7 +1875,13 @@
    "id": "adaa314c-09af-4ae8-b550-e6dff57e1b0b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# scaler = StandardScalerr()\n",
+    "# model = SVC(random_state=42, max_iter=1000, kernel='sigmoid',C=10, probability=True)\n",
+    "# pipeline = Pipeline([('scaler', scaler), ('model', model)])\n",
+    "# pipeline.fit(X_train, y_train)\n",
+    "# dump(pipeline, Path(\"./saved_models/aggressive.joblib\""
+   ]
   },
   {
    "cell_type": "code",
