--- a/modeling/metric_comparisons.ipynb
+++ b/modeling/metric_comparisons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6fd87ed7-d3a0-408e-a9ba-919a16127823",
    "metadata": {
     "tags": []
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7c023ac6-a6a9-427b-ae73-be27fd581f24",
    "metadata": {
     "tags": []
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "bagging = pd.read_csv(Path(\"./model_metrics/bagging_classifier.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
-    "# centroid = pd.read_csv(Path(\"./model_metrics/centroid.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
+    "adaboost = pd.read_csv(Path(\"./model_metrics/adaboost.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
     "gaussian = pd.read_csv(Path(\"./model_metrics/gaussian.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
     "logistic_regression = pd.read_csv(Path(\"./model_metrics/logistic_regression.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
     "random_forest = pd.read_csv(Path(\"./model_metrics/random_forest.csv\"), infer_datetime_format=True, parse_dates=True, index_col=['type', 'level_1'])\n",
