updated file creation script

--- a/modeling/save_best_models.ipynb
+++ b/modeling/save_best_models.ipynb
@@ -546,7 +546,8 @@
    "id": "62eb064e-95b4-4104-9e09-466bd6041eb1",
    "metadata": {},
    "source": [
-    "### All portfolio classes found either SVC or GuassianNB to provide the best resutls\n",
+    "### All portfolio classes found either SVC or GuassianNB to provide the best results,\n",
+    "### except for the alternative class which found the neural network to provide the best results.\n",
     "### Both SVC and GaussianNB had the optimal performance with the reduced feature set\n",
     "\n",
     "#### loading train/test data for reduced features and defining the models"
