--- a/mywealthplan.ipynb
+++ b/mywealthplan.ipynb
@@ -927,13 +927,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:51205\n"
+      "Launching server at http://localhost:58715\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<panel.io.server.Server at 0x19dcce040>"
+       "<panel.io.server.Server at 0x1a64f2b80>"
       ]
      },
      "execution_count": 11,
