updated requirements.text; updated saved model notebook; renamed notebooks

--- a/modeling/save_best_models.ipynb
+++ b/modeling/save_best_models.ipynb
@@ -538,7 +538,7 @@
    "id": "5279e43f-061c-4ae4-8c9f-bfd6b1c9604e",
    "metadata": {},
    "source": [
-    "# fit and save best model for all portfolio classes"
+    "# fit and save best model for all portfolio classes based upon final evaluation. Evaluations can be found within each models individual notebook and within the 'metric_comparisons' notebook"
    ]
   },
   {
@@ -546,20 +546,20 @@
    "id": "62eb064e-95b4-4104-9e09-466bd6041eb1",
    "metadata": {},
    "source": [
-    "### All portfolio classes found either Random Forest to provide the best results, except for the conservative class which found the neural network to provide the best results.\n",
-    "### Random Forest had the optimal performance with the reduced feature set while the neural network worked best with the reduced feature set\n",
+    "### All portfolio classes found that Random Forest to provide the best results, except for the balanced class which found the neural network to provide the best results.\n",
+    "### Random Forest had the optimal performance with the full feature set while the neural network worked best with the reduced feature set\n",
     "\n",
-    "#### loading train/test data for reduced features and defining the models"
+    "#### loading train/test data for reduced or full features depending on model being used and defining Random Forest model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d6ca7c3c-d393-4e88-a36c-5433f33cd1f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load X_train_reduced and X_test_reduced\n",
+    " # load X_train_reduced and X_test_reduced\n",
     "X_train_full_conservative = pd.read_csv(Path(\"./data/X_train_full_conservative.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)\n",
     "X_test_full_conservative = pd.read_csv(Path(\"./data/X_test_full_conservative.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)\n",
     "\n",
@@ -589,21 +589,28 @@
     "y_test_aggressive = pd.read_csv(Path(\"./data/y_test_aggressive.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)\n",
     "\n",
     "y_train_alternative = pd.read_csv(Path(\"./data/y_train_alternative.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)\n",
-    "y_test_alternative = pd.read_csv(Path(\"./data/y_test_alternative.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)"
+    "y_test_alternative = pd.read_csv(Path(\"./data/y_test_alternative.csv\"), index_col=\"Unnamed: 0\", parse_dates=True, infer_datetime_format=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c51b32ea-6f02-4e34-97e4-b674729376a9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "svc_model = SVC(random_state=42, max_iter=1000, kernel='linear', C=0.5, probability=True)\n",
-    "gaussian_model = GaussianNB(var_smoothing=1.0, priors=[.3, 0.7])\n",
-    "rf_model = RandomForestClassifier(n_estimators=1000, max_depth=40, min_samples_split=50, min_samples_leaf=20, max_features=None, bootstrap=True, criterion='entropy', min_impurity_decrease=0.01, class_weight={0: 1, 1: 5}, oob_score=True)\n"
+    "rf_model = RandomForestClassifier(n_estimators=1000,\n",
+    "                                  max_depth=40,\n",
+    "                                  min_samples_split=50,\n",
+    "                                  min_samples_leaf=20,\n",
+    "                                  max_features=None,\n",
+    "                                  bootstrap=True,\n",
+    "                                  criterion='entropy', \n",
+    "                                  min_impurity_decrease=0.01,\n",
+    "                                  class_weight={0: 1, 1: 5},\n",
+    "                                  oob_score=True)"
    ]
   },
   {
@@ -616,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "629c10e6-b6e5-492b-a662-2e8bc234a200",
    "metadata": {
     "tags": []
@@ -664,9 +671,13 @@
    "source": [
     "np.random.seed(8171)\n",
     "\n",
+    "\n",
     "pipeline = Pipeline([('scaler', scaler), ('model', rf_model)])\n",
     "pipeline.fit(X_train_full_aggressive, y_train_aggressive)\n",
-    "dump(pipeline,Path(\"./saved_models/aggressive.joblib\"))\n"
+    "\n",
+    "filepath = Path(\"./saved_models/aggressive.joblib\")\n",
+    "with open(filepath, 'wb') as file:\n",
+    "    dump(pipeline, file)"
    ]
   },
   {
@@ -699,48 +710,10 @@
     "\n",
     "pipeline = Pipeline([('scaler', scaler), ('model', rf_model)])\n",
     "pipeline.fit(X_train_full_alternative, y_train_alternative)\n",
-    "dump(pipeline,Path(\"./saved_models/alternative.joblib\"))\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Create the scaler instance\n",
-    "# X_scaler = StandardScaler()\n",
-    "\n",
-    "# # Fit the scaler\n",
-    "# X_scaler.fit(X_train_reduced_alternative)\n",
-    "\n",
-    "# # Scale the data\n",
-    "# X_train_reduced_alternative_scaled = X_scaler.transform(X_train_reduced_alternative)\n",
-    "# X_test_reduced_alternative_scaled = X_scaler.transform(X_test_reduced_alternative)\n",
-    "# number_input_features = 7\n",
-    "# hidden_nodes_layer1 = 8\n",
-    "# hidden_nodes_layer2 = 3\n",
-    "# activation_1 = 'relu'\n",
-    "# activation_2 = 'relu'\n",
-    "# lr = 0.001\n",
-    "\n",
-    "# # Create a sequential neural network model\n",
-    "# nn_alternative = Sequential()\n",
-    "\n",
-    "# # Add the first hidden layer\n",
-    "# nn_alternative.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=activation_1))\n",
-    "\n",
-    "# # Add the second hidden layer\n",
-    "# nn_alternative.add(Dense(units=hidden_nodes_layer2, activation=activation_2))\n",
-    "\n",
-    "# # Add the output layer\n",
-    "# nn_alternative.add(Dense(units=1, activation=\"sigmoid\"))\n",
-    "\n",
-    "# # Compile the model \n",
-    "# # Set the parameters as mean_squared_error, adam, and accuracy.\n",
-    "# nn_alternative.compile(loss=\"binary_crossentropy\", optimizer=tf.keras.optimizers.Adam(learning_rate=lr), metrics=[\"accuracy\"])\n",
-    "\n",
-    "# # Fit the model\n",
-    "# deep_net_alternative_model = nn_alternative.fit(X_train_reduced_alternative_scaled, y_train_alternative, epochs=100, verbose=0)\n",
-    "\n",
-    "\n",
-    "# nn_alternative.save(Path(\"./saved_models/alternative.h5\"))\n"
+    "filepath = Path(\"./saved_models/alternative.joblib\")\n",
+    "with open(filepath, 'wb') as file:\n",
+    "    dump(pipeline,file)\n"
    ]
   },
   {
@@ -771,15 +744,12 @@
     "# pipeline.fit(X_train_full_balanced, y_train_balanced)\n",
     "# dump(pipeline, Path(\"./saved_models/balanced.joblib\"))\n",
     "tf.keras.utils.set_random_seed(42)\n",
-    "\n",
-    "# Create the scaler instance\n",
+    "    \n",
+    "   # Create the scaler instance\n",
     "X_scaler = StandardScaler()\n",
     "\n",
     "# Fit the scaler\n",
     "X_scaler.fit(X_train_reduced_balanced)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Scale the data\n",
     "X_train_reduced_balanced_scaled = X_scaler.transform(X_train_reduced_balanced)\n",
@@ -811,7 +781,20 @@
     "deep_net_balanced_model = nn_balanced.fit(X_train_reduced_balanced_scaled, y_train_balanced, epochs=100, verbose=0)\n",
     "\n",
     "\n",
-    "nn_balanced.save(Path(\"./saved_models/balanced.h5\"))"
+    "nn_balanced.save(Path(\"../modeling/saved_models/balanced.h5\"))\n",
+    "\n",
+    "# ## Conservative\n",
+    "\n",
+    "np.random.seed(8171)\n",
+    "\n",
+    "\n",
+    "pipeline = Pipeline([('scaler', scaler), ('model', svc_model)])\n",
+    "pipeline.fit(X_train_full_conservative, y_train_conservative)\n",
+    "\n",
+    "filepath = Path(\"./saved_models/conservative.joblib\")\n",
+    "with open(filepath, 'wb') as file:\n",
+    "    dump(pipeline, file)\n",
+    "\n"
    ]
   },
   {
@@ -844,47 +827,11 @@
     "\n",
     "pipeline = Pipeline([('scaler', scaler), ('model', svc_model)])\n",
     "pipeline.fit(X_train_full_conservative, y_train_conservative)\n",
-    "dump(pipeline, Path(\"./saved_models/conservative.joblib\"))\n",
     "\n",
-    "\n",
-    "\n",
-    "# # Create the scaler instance\n",
-    "# X_scaler = StandardScaler()\n",
-    "\n",
-    "# # Fit the scaler\n",
-    "# X_scaler.fit(X_train_reduced_conservative)\n",
-    "\n",
-    "# # Scale the data\n",
-    "# X_train_reduced_conservative_scaled = X_scaler.transform(X_train_reduced_conservative)\n",
-    "# X_test_reduced_conservative_scaled = X_scaler.transform(X_test_reduced_conservative)\n",
-    "# number_input_features = 7\n",
-    "# hidden_nodes_layer1 = 36\n",
-    "# hidden_nodes_layer2 = 3\n",
-    "# activation_1 = 'tanh'\n",
-    "# activation_2 = 'tanh'\n",
-    "# lr = 0.01\n",
-    "\n",
-    "# # Create a sequential neural network model\n",
-    "# nn_conservative = Sequential()\n",
-    "\n",
-    "# # Add the first hidden layer\n",
-    "# nn_conservative.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=activation_1))\n",
-    "\n",
-    "# # Add the second hidden layer\n",
-    "# nn_conservative.add(Dense(units=hidden_nodes_layer2, activation=activation_2))\n",
-    "\n",
-    "# # Add the output layer\n",
-    "# nn_conservative.add(Dense(units=1, activation=\"sigmoid\"))\n",
-    "\n",
-    "# # Compile the model \n",
-    "# # Set the parameters as mean_squared_error, adam, and accuracy.\n",
-    "# nn_conservative.compile(loss=\"binary_crossentropy\", optimizer=tf.keras.optimizers.Adam(learning_rate=lr), metrics=[\"accuracy\"])\n",
-    "\n",
-    "# # Fit the model\n",
-    "# deep_net_conservative_model = nn_conservative.fit(X_train_reduced_conservative_scaled, y_train_conservative, epochs=100, verbose=0)\n",
-    "\n",
-    "\n",
-    "# nn_conservative.save(Path(\"./saved_models/conservative.h5\"))"
+    "filepath = Path(\".saved_models/conservative.joblib\")\n",
+    "with open(filepath, 'wb') as file:\n",
+    "    dump(pipeline, file)\n",
+    "\n"
    ]
   },
   {
@@ -917,9 +864,13 @@
    "source": [
     "np.random.seed(8171)\n",
     "\n",
+    "\n",
     "pipeline = Pipeline([('scaler', scaler), ('model', rf_model)])\n",
     "pipeline.fit(X_train_full_growth, y_train_growth)\n",
-    "dump(pipeline, Path(\"./saved_models/growth.joblib\"))"
+    "\n",
+    "filepath = Path(\".saved_models/growth.joblib\")\n",
+    "with open(filepath, 'wb') as file:\n",
+    "    dump(pipeline, file)"
    ]
   },
   {
