--- a/mywealthpath.ipynb
+++ b/mywealthpath.ipynb
@@ -929,13 +929,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:65094\n"
+      "Launching server at http://localhost:58701\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<panel.io.server.Server at 0x1a9d471f0>"
+       "<panel.io.server.Server at 0x1ad0db2b0>"
       ]
      },
      "execution_count": 11,
