updated main readme and modeling readme. added figures for modeling readme.

--- a/modeling/gaussian_nb.ipynb
+++ b/modeling/gaussian_nb.ipynb
@@ -1172,6 +1172,9 @@
    "execution_count": 9,
    "id": "79577e95-857c-466d-8d2f-9e708eb4dadd",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
