--- a/modeling/logistic_regression.ipynb
+++ b/modeling/logistic_regression.ipynb
@@ -1177,6 +1177,9 @@
    "execution_count": 9,
    "id": "c211a6cb-2a50-484d-811d-7691e2c0ca46",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
