--- a/modeling/svm.ipynb
+++ b/modeling/svm.ipynb
@@ -1146,7 +1146,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "f1f554d5-a0a1-425c-892e-5c200f1097ef",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
