--- a/modeling/random_forest.ipynb
+++ b/modeling/random_forest.ipynb
@@ -1187,6 +1187,9 @@
    "execution_count": 10,
    "id": "9cce6b7e-f13a-40d8-a1eb-425815877b71",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
